# chess_cpp

./: .gitignore  .gitmessage.txt  CMakeLists.txt  README.md  chess_cpp.cpp
src/: CMakeLists.txt  board.cpp  board.h  board_test.cpp  chess_cpp.cpp  engine.cpp  engine.h  evaluate.cpp  evaluate.h  hashing.cpp  hashing.h  header.h  main.cpp  misc.cpp  misc.h  move.h  psqt.h  search.cpp  search.h  tt.cpp  tt.h  uci.cpp  uci.h
src/lib/: board.cpp  board.h  engine.cpp  engine.h  evaluate.cpp  evaluate.h  hashing.cpp  hashing.h  header.h  limit.h  limits.h  misc.cpp  misc.h  move.h  psqt.h  search.cpp  search.h  tt.cpp  tt.h  uci.cpp  uci.h
tests/: CMakeLists.txt  board_test.cpp  castling_rights.cpp  hashing_test.cpp  moves_generator.cpp
